Ganti nama file
simple-share.html menjadi index.html
simpleshare-style.css menjadi style.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Share Button by Nug</title>
     <script src="https://use.fontawesome.com/417a7bac5d.js"></script>
-    <link rel='stylesheet' href='simpleshare-style.css' type='text/css' media='all' />
+    <link rel='stylesheet' href='style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='assets/jwicon/style.css' type='text/css' media='all' />
     <style type="text/css">
       /*CSS Demo*/
