--- a/simpleshare/index.html
+++ b/simpleshare/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Share Button by Nug</title>
-    <script src="https://use.fontawesome.com/417a7bac5d.js"></script>
+    <link rel='stylesheet' href='assets/css/font-awesome.min.css' type='text/css' media='all' />
     <link rel='stylesheet' href='style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='assets/jwicon/style.css' type='text/css' media='all' />
     <style type="text/css">
